# DeviceLabPro

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/simulator_cli/: main.cpp
core/include/devicelab/: device_profile.hpp  scenario.hpp  simulator.hpp  types.hpp
core/src/: device_profile.cpp  scenario.cpp  simulator.cpp
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: empty-dashboard.tsx  fault-panel.tsx  history-panel.tsx  loading-shell.tsx  log-viewer.tsx  metric-card.tsx  state-ladder.tsx  telemetry-chart.tsx  timeline-panel.tsx
dashboard/src/hooks/: use-dashboard.ts
dashboard/src/lib/: api.ts  parsers.ts  state.ts
docs/: architecture.md  state-machine.md
profiles/: eco_controller_s1.json  rugged_controller_x2.json  thermal_controller_mk1.json
runs/degraded_behavior/: logs.jsonl  replay_manifest.json  report.html  report.md  summary.json  telemetry.jsonl  transitions.json
runs/failure_recovery/: logs.jsonl  replay_manifest.json  report.html  report.md  summary.json  telemetry.jsonl  transitions.json
runs/nominal_behavior/: logs.jsonl  replay_manifest.json  report.html  report.md  summary.json  telemetry.jsonl
runs/nominal_behavior_replay/: logs.jsonl  replay_manifest.json  report.html  report.md  summary.json  telemetry.jsonl  transitions.json
scenarios/: degraded_behavior.json  failure_recovery.json  nominal_behavior.json
tests/: test_faults.cpp  test_scenarios.cpp  test_state_machine.cpp  test_validation.cpp
tools/: __init__.py
tools/bridge/: __init__.py  requirements-dev.txt  server.py
tools/reporting/: __init__.py  render_report.py
(+4 files in other folders)
